try fix edit covered

--- a/assets/main.scss
+++ b/assets/main.scss
@@ -109,7 +109,7 @@
   width: 80%;
   height: 20px;
   margin-left: -10px;
-  padding-top: 5px;
+  margin-top: 0px;
   border-width: 0px;
   box-shadow:#f6f6f6;
   color: #d2d6da;
